--- a/config
+++ b/config
@@ -159,7 +159,7 @@ bindsym $Mod+7 workspace number $ws7
 bindsym $Mod+8 workspace number $ws8
 
 # move focused container to workspace
-bindsym $Mod+Shift+1 move container to workspace number $ws1
+bindsym $Mod+Shift+1 move container to workspace number 1
 bindsym $Mod+Shift+2 move container to workspace number $ws2
 bindsym $Mod+Shift+3 move container to workspace number $ws3
 bindsym $Mod+Shift+4 move container to workspace number $ws4
@@ -169,6 +169,16 @@ bindsym $Mod+Shift+7 move container to workspace number $ws7
 bindsym $Mod+Shift+8 move container to workspace number $ws8
 bindsym $Mod+Shift+9 move container to workspace number $ws9
 bindsym $Mod+Shift+0 move container to workspace number $ws10
+
+# move with the focused window
+bindsym $mod+Ctrl+1 move container to workspace number $ws1; workspace $ws1
+bindsym $mod+Ctrl+2 move container to workspace number $ws2; workspace $ws2
+bindsym $mod+Ctrl+3 move container to workspace number $ws3; workspace $ws3
+bindsym $mod+Ctrl+4 move container to workspace number $ws4; workspace $ws4
+bindsym $mod+Ctrl+5 move container to workspace number $ws5; workspace $ws5
+bindsym $mod+Ctrl+6 move container to workspace number $ws6; workspace $ws6
+bindsym $mod+Ctrl+7 move container to workspace number $ws7; workspace $ws7
+bindsym $mod+Ctrl+8 move container to workspace number $ws8; workspace $ws8
 
 # reload the configuration file
 bindsym $Mod+Shift+c reload
@@ -208,10 +218,12 @@ bindsym $Mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
-    position top
+    position top 
+    font pango: Monospace 7 
     colors {
 		background $bar-color
-	    	separator #757575
+	    	separator $bar-color 
+        statusline #ADE8F4
 		#                  border             background         text
 		focused_workspace  $bar-color          $bg-color           $inactive-text-color 
 		inactive_workspace $bar-color          $bar-color          $inactive-text-color 
@@ -233,14 +245,14 @@ bar {
 exec i3-config-wizard
 exec --no-startup-id nitrogen --restore
 
-set $bg-color 	         #001718
+set $bg-color 	         #1F456E
 set $inactive-bg-color   #93EA95
 set $text-color          #c0c6ce
-set $inactive-text-color #FFFFFF
+set $inactive-text-color #ADE8F4
 set $urgent-bg-color     #E53935
 set $indicator-color     #000000
-set $status-text         #33c7d8
-set $bar-color           #b48ead
+set $status-text         #ADE8F4
+set $bar-color           #1F456E
 set $inactive-tab        #F1BDD7
 # window colors
 #                       border              background         text                 indicator
@@ -301,6 +313,7 @@ for_window [class="KeePassXC"] floating enable sticky
 for_window [class="shutter"] floating enable sticky border normal
 for_window [urgent=latest] focus
 bindsym $mod+0 mode "$mode_system"
+# for_window [class="i3bar"] gaps inner 3
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id i3exit lock, mode "default"
@@ -368,4 +381,7 @@ mode "$mode_gaps_outer" {
 bindsym $mod+Shift+m bar mode toggle
 exec --no-startup-id xautolock -time 10 -locker i3lock 
 exec --no-startup-id alternating_layouts.py 
+exec_always --no-startup-id /usr/bin/i3wsr
+# exec_always --no-startup-id /usr/local/bin/asteriks.sh
+bindsym $mod+Ctrl+m exec --no-startup-id /usr/local/bin/rename.sh   
 
