--- a/config
+++ b/config
@@ -11,7 +11,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Noto Sans 8
+font pango:Noto Sans 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -27,7 +27,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -36,16 +36,16 @@ exec -always --no-startup-id volumeicon
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
-bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
-bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status && killall dunst && ~/.scripts/sound.sh 
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status &&killall dunst && ~/.scripts/sound.sh 
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status && killall dunst && ~/.scripts/mute.sh
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status && killall dunst && ~/.scripts/mute.sh
+# bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
+# bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
+# bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5% && killall dunst && ~/.scripts/brightness.sh
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%- && killall dunst && ~/.scripts/brightness.sh 
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
@@ -54,6 +54,7 @@ set $down j
 set $left h
 set $right l 
 set $Mod Mod1
+set $term urxvt -fn 'xft: monospace:pixelsize=16":Style=Regular' 
 # use Mouse+$Mod to drag floating windows to their wanted position
 floating_modifier $Mod
 
@@ -61,16 +62,16 @@ floating_modifier $Mod
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
 
-bindsym $Mod+Return exec urxvt -fn 'xft: monospace:pixelsize=13":Style=Regular' 
+bindsym $Mod+Return exec urxvt -fn 'xft: monospace:pixelsize=16":Style=Regular' 
 bindsym $Mod+u exec firefox 
-bindsym $Mod+m exec urxvt -fn 'xft: monospace:pixelsize=13:Style=Regular' -e ranger 
+bindsym $Mod+m exec urxvt -fn 'xft: monospace:pixelsize=16:Style=Regular' -e ranger 
 bindsym $Mod+y exec discord
 bindsym $Mod+z exec shutter
-bindsym $Mod+n exec urxvt -fn 'xft: bitstream vera sans mono:pixelsize=13:Style=Regular' -e vim
+bindsym $Mod+n exec urxvt -fn 'xft: bitstream vera sans mono:pixelsize=16:Style=Regular' -e vim
 
 # kill focused window
 bindsym $Mod+i kill
-bindsym $Mod+x exec i3lock
+bindsym $Mod+x exec i3exit lock
 # start dmenu (a program launcher)
 # A more modern dmenu replacement is rofi:
 # bindsym $Mod+d exec "rofi -modi drun,run -show drun"
@@ -219,7 +220,7 @@ bindsym $Mod+r mode "resize"
 bar {
         status_command i3status
     position top 
-    font pango: Monospace 7 
+    font pango: Monospace 9 
     colors {
 		background $bar-color
 	    	separator $bar-color 
@@ -245,18 +246,18 @@ bar {
 exec i3-config-wizard
 exec --no-startup-id nitrogen --restore
 
-set $bg-color 	         #1F456E
+set $bg-color 	         #000000
 set $inactive-bg-color   #93EA95
 set $text-color          #c0c6ce
 set $inactive-text-color #ADE8F4
 set $urgent-bg-color     #E53935
 set $indicator-color     #000000
 set $status-text         #ADE8F4
-set $bar-color           #1F456E
+set $bar-color           #000000
 set $inactive-tab        #F1BDD7
 # window colors
 #                       border              background         text                 indicator
-client.focused          $inactive-bg-color $bg-color          $inactive-bg-color
+client.focused          $inactive-tab $bg-color          $inactive-bg-color
 client.unfocused        $bg-color  $bg-color        $status-text
 client.focused_inactive $bg-color   $inactive-text-color $indicator-color
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $indicator-color
@@ -273,14 +274,17 @@ bindsym $mod+Shift+z exec --no-startup-id morc_menu
 bindsym $mod+b workspace back_and_forth
 bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 bindsym $mod+BackSpace exec urxvt -fn 'xft: monospace:pixelsize=13":Style=Regular' -T "vim-float" -e sh -c "vim -c 'cd ~/poubelle_perso'" 
-for_window[title="vim-float"] floating enable 
+bindsym $mod+p exec $term -T "urxvt-float" 
+for_window[title="vim-float"] floating enable border normal 
+for_window[title="urxvt-float"] floating enable border normal 
+
 default_border pixel 1
 default_floating_border normal
 hide_edge_borders none
 bindsym $mod+Shift+u border none
 bindsym $mod+Shift+y border pixel 1
 bindsym $mod+Shift+n border normal
-bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
+bindsym $mod+Shift+d --release exec "killall dunst; 
 workspace_auto_back_and_forth yes
 for_window [title="alsamixer"] floating enable border pixel 1
 for_window [class="calamares"] floating enable border normal
@@ -331,10 +335,10 @@ mode "$mode_system" {
 
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b
-exec --no-startup-id manjaro-hello
+# exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
-exec --no-startup-id pamac-tray
+# exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
@@ -379,9 +383,14 @@ mode "$mode_gaps_outer" {
 }
 
 bindsym $mod+Shift+m bar mode toggle
-exec --no-startup-id xautolock -time 10 -locker i3lock 
-exec --no-startup-id alternating_layouts.py 
+# exec --no-startup-id xautolock -time 15 -locker i3lock 
+exec_always --no-startup-id i3-alternating_layouts.py 
 exec_always --no-startup-id /usr/bin/i3wsr
 # exec_always --no-startup-id /usr/local/bin/asteriks.sh
 bindsym $mod+Ctrl+m exec --no-startup-id /usr/local/bin/rename.sh   
+bindsym $mod+Ctrl+l exec --no-startup-id ~/.scripts/sound.sh 
+bindsym F12 exec --no-startup-id i3-scrot
 
+# bindsym $mod+p exec urxvt -e echo "dlkkf" | dmenu
+
+# bindsym $mod+p exec $term -e fzf --height 30 
