--- a/config
+++ b/config
@@ -62,7 +62,7 @@ floating_modifier $Mod
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
 
-bindsym $Mod+Return exec urxvt -fn 'xft: monospace:pixelsize=16":Style=Regular' 
+bindsym $Mod+Return exec urxvt -fn 'xft: monospace:pixelsize=16":Style=Regular' -e tmux
 bindsym $Mod+u exec firefox 
 bindsym $Mod+m exec urxvt -fn 'xft: monospace:pixelsize=16:Style=Regular' -e ranger 
 bindsym $Mod+y exec discord
@@ -315,6 +315,7 @@ for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
 for_window [class="KeePassXC"] floating enable sticky
 for_window [class="shutter"] floating enable sticky border normal
+for_window [class="mpv"] floating enable sticky resize set 600
 for_window [urgent=latest] focus
 bindsym $mod+0 mode "$mode_system"
 # for_window [class="i3bar"] gaps inner 3
@@ -344,43 +345,45 @@ exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 gaps inner 9 
 gaps outer -2
+bindsym $mod+Ctrl+g gaps inner current set 0; gaps outer current set 0 
+bindsym $mod+Shift+g gaps inner current set 9; gaps outer current set -2
 smart_gaps on
 smart_borders on 
-set $mode_gaps Gaps: (o) outer, (i) inner
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
-bindsym $mod+Shift+g mode "$mode_gaps"
+# set $mode_gaps Gaps: (o) outer, (i) inner
+# set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+# set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+# bindsym $mod+Shift+g mode "$mode_gaps"
 
-mode "$mode_gaps" {
-        bindsym o      mode "$mode_gaps_outer"
-        bindsym i      mode "$mode_gaps_inner"
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_inner" {
-        bindsym plus  gaps inner current plus 5
-        bindsym minus gaps inner current minus 5
-        bindsym 0     gaps inner current set 0
+# mode "$mode_gaps" {
+#         bindsym o      mode "$mode_gaps_outer"
+#         bindsym i      mode "$mode_gaps_inner"
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+# }
+# mode "$mode_gaps_inner" {
+#         bindsym plus  gaps inner current plus 5
+#         bindsym minus gaps inner current minus 5
+#         bindsym 0     gaps inner current set 0
 
-        bindsym Shift+plus  gaps inner all plus 5
-        bindsym Shift+minus gaps inner all minus 5
-        bindsym Shift+0     gaps inner all set 0
+#         bindsym Shift+plus  gaps inner all plus 5
+#         bindsym Shift+minus gaps inner all minus 5
+#         bindsym Shift+0     gaps inner all set 0
 
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_outer" {
-        bindsym plus  gaps outer current plus 5
-        bindsym minus gaps outer current minus 5
-        bindsym 0     gaps outer current set 0
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+# }
+# mode "$mode_gaps_outer" {
+#         bindsym plus  gaps outer current plus 5
+#         bindsym minus gaps outer current minus 5
+#         bindsym 0     gaps outer current set 0
 
-        bindsym Shift+plus  gaps outer all plus 5
-        bindsym Shift+minus gaps outer all minus 5
-        bindsym Shift+0     gaps outer all set 0
+#         bindsym Shift+plus  gaps outer all plus 5
+#         bindsym Shift+minus gaps outer all minus 5
+#         bindsym Shift+0     gaps outer all set 0
 
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+# }
 
 bindsym $mod+Shift+m bar mode toggle
 # exec --no-startup-id xautolock -time 15 -locker i3lock 
@@ -388,9 +391,11 @@ exec_always --no-startup-id i3-alternating_layouts.py
 exec_always --no-startup-id /usr/bin/i3wsr
 # exec_always --no-startup-id /usr/local/bin/asteriks.sh
 bindsym $mod+Ctrl+m exec --no-startup-id /usr/local/bin/rename.sh   
-bindsym $mod+Ctrl+l exec --no-startup-id ~/.scripts/sound.sh 
+bindsym $mod+Ctrl+l exec --no-startup-id ~/.scripts/startup.sh
+bindsym $mod+q exec --no-startup-id qutebrowser
 bindsym F12 exec --no-startup-id i3-scrot
 
-# bindsym $mod+p exec urxvt -e echo "dlkkf" | dmenu
+
+bindsym $mod+t exec --no-startup-id ~/.scripts/dmenu.sh 
 
 # bindsym $mod+p exec $term -e fzf --height 30 
