--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,28 @@
 set -ga terminal-overrides ",*256col*:Tc"
 set -g default-terminal "screen-256color"
+set -g history-limit 10000
 set -g status-bg black
 set -g status-fg green 
-set -g history-limit 10000
 set -g base-index 1
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @resurrect-strategy-vim 'session'
 setw -g pane-base-index 1
+set -g @continuum-restore 'on'
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 unbind C-b
 set -g prefix C-a
+
+# bind-key -n C-f run-shell "~/scrips/fzf-session.sh"
+# bind-key -n C-f run-shell "tmux send-keys -t '#{session_name}' '/home/ash/scrips/fzf-session.sh' Enter"
+bind-key -n C-f run-shell "tmux send-keys -t '#{session_id}' '~/.scripts/fzf-session.sh' Enter;" 
+
+
 
 run '~/.tmux/plugins/tpm/tpm'
