true color alacritty neovim

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-set -ga terminal-overrides ",*256col*:Tc"
-set -g default-terminal "screen-256color"
+set -as terminal-features ",*:RGB"
+set -g default-terminal "tmux-256color"
 set -g history-limit 10000
 set -g status-bg black
 set -g status-fg green 
@@ -23,6 +23,8 @@ set -g prefix C-a
 # bind-key -n C-f run-shell "tmux send-keys -t '#{session_name}' '/home/ash/scrips/fzf-session.sh' Enter"
 bind-key -n C-f run-shell "tmux send-keys -t '#{session_id}' '~/.scripts/fzf-session.sh' Enter;" 
 
-
+bind-key -r C run-shell "~/.scripts/fzf-session.sh /home/ash/c"
+bind-key -r T run-shell "~/.scripts/fzf-session.sh /home/ash/.config/"
+bind-key -r P run-shell "~/.scripts/fzf-session.sh /home/ash/poubelle_perso"
 
 run '~/.tmux/plugins/tpm/tpm'
