--- a/alacritty.toml
+++ b/alacritty.toml
@@ -187,7 +187,7 @@ args = ["--login"]
 # Kanagawa Alacritty Colors
 [colors]
   [colors.primary]
-    background = "0x1f1f28"
+    background = "0x1f1e2e"
     foreground = "0xdcd7ba"
 
   [colors.normal]
