--- a/config
+++ b/config
@@ -11,7 +11,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Noto Sans 10
+font pango: Monospace  9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -63,7 +63,7 @@ floating_modifier $Mod
 tiling_drag modifier titlebar
 
 bindsym $Mod+Return exec $term 
-bindsym $Mod+u exec firefox 
+bindsym $Mod+u exec librewolf 
 bindsym $Mod+m exec $term -e ranger 
 bindsym $Mod+y exec vesktop
 bindsym $Mod+z exec shutter
@@ -116,6 +116,7 @@ bindsym $Mod+f fullscreen toggle
 bindsym $Mod+s layout stacking
 bindsym $Mod+w layout tabbed
 bindsym $Mod+e layout toggle split
+workspace_layout tabbed
 
 # toggle tiling / floating
 bindsym $Mod+Shift+space floating toggle
@@ -220,7 +221,7 @@ bindsym $Mod+r mode "resize"
 bar {
         status_command i3status
     position top 
-    font pango: Monospace 9 
+    font pango: Monospace  9 
     colors {
 		background $idk-color
 	    	separator $idk-color 
@@ -314,7 +315,7 @@ for_window [class="Skype"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
-for_window [class="KeePassXC"] floating enable sticky
+# for_window [class="KeePassXC"] floating enable sticky
 for_window [class="shutter"] floating enable sticky border normal
 for_window [class="mpv"] floating enable sticky resize set 600
 for_window [urgent=latest] focus
